--- a/waybar/config
+++ b/waybar/config
@@ -9,25 +9,21 @@
     "modules-center": ["idle_inhibitor", "sway/window"],
     "modules-right": ["pulseaudio", "battery", "battery#bat2", "clock", "tray"],
     // Modules configuration
-    // "sway/workspaces": {
-    //     "disable-scroll": true,
-    //     "all-outputs": true,
-    //     "warp-on-scroll": false,
-    //     "format": "{name}: {icon}",
-    //     "format-icons": {
-    //         "1": "",
-    //         "2": "",
-    //         "3": "",
-    //         "4": "",
-    //         "5": "",
-    //         "urgent": "",
-    //         "focused": "",
-    //         "default": ""
-    //     }
-    // },
-     "sway/workspaces": {
-         "format": "{icon}",
-     },
+    "sway/workspaces": {
+      "format": "<span size='larger'>{name}</span> {windows}",
+      "format-window-separator": " | ",
+      "window-rewrite-default": "{name}",
+      "window-format": "<span color='#e0e0e0'>{name}</span>",
+      "window-rewrite": {
+        "class<firefox>": "",
+        "class<Mattermost>": "",
+        "class<com.mitchellh.ghostty>": "",
+        "class<bruno>": "🐶",
+        "class<code>": "",
+        "class<org.gnome.Nautilus>": "",
+        "class<zoom>": "",
+      }
+    },
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
