--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,12 +15,12 @@ bind Space last-window
 unbind C-Space
 bind C-Space last-window
 
-bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
 set-option -g status-keys emacs
 set-option -g focus-events on
 
-set-option -g default-shell /opt/homebrew/bin/nu
+set-option -g default-shell /usr/bin/fish
 
 setw -g mode-keys vi
 set -g escape-time 10
