--- a/zed/settings.json
+++ b/zed/settings.json
@@ -10,6 +10,7 @@
   "ssh_connections": [
     {
       "host": "coder.main",
+      "args": [],
       "projects": [
         {
           "paths": [
@@ -18,7 +19,17 @@
         },
         {
           "paths": [
+            "/home/coder/repos"
+          ]
+        },
+        {
+          "paths": [
             "/home/coder/repos/automation"
+          ]
+        },
+        {
+          "paths": [
+            "/home/coder/repos/base-dev-image"
           ]
         },
         {
