--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,13 +14,14 @@ unbind Space
 bind Space last-window
 unbind C-Space
 bind C-Space last-window
+bind l switch-client -l
 
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
 set-option -g status-keys emacs
 set-option -g focus-events on
 
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /bin/zsh
 
 setw -g mode-keys vi
 set -g escape-time 10
