--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,8 @@ bind C-Space last-window
 bind l switch-client -l
 
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
+set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
 
 set-option -g status-keys emacs
 set-option -g focus-events on
