--- a/zed/settings.json
+++ b/zed/settings.json
@@ -143,7 +143,7 @@
     "helm": true,
     "graphql": true,
     "ansible": true,
-    // "python-snippets": true
+    "python-snippets": true
   },
   "disable_ai": true,
   "ui_font_size": 14,
