--- a/zed/settings.json
+++ b/zed/settings.json
@@ -143,7 +143,8 @@
     "helm": true,
     "graphql": true,
     "ansible": true,
-    "python-snippets": true
+    "python-snippets": true,
+    "rose-pine-theme": true
   },
   "disable_ai": true,
   "ui_font_size": 14,
@@ -153,6 +154,7 @@
   "vertical_scroll_margin": 8,
   "show_signature_help_after_edits": true,
   "colorize_brackets": true,
+  "use_autoclose": false,
   "active_pane_modifiers": {
     "inactive_opacity": 0.8
   },
@@ -164,7 +166,7 @@
   "theme": {
     "mode": "system",
     "light": "Gruvbox Light Hard",
-    "dark": "Gruvbox Dark Hard"
+    "dark": "Rosé Pine"
   },
   "indent_guides": {
     "coloring": "indent_aware"
