--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,13 +7,8 @@ setw -g pane-base-index 1
 
 set -g renumber-windows on
 
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
 unbind Space
 bind Space last-window
-unbind C-Space
-bind C-Space last-window
 bind l switch-client -l
 
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
@@ -23,7 +18,7 @@ set -g default-terminal "tmux-256color"
 set-option -g status-keys emacs
 set-option -g focus-events on
 
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /opt/homebrew/bin/fish 
 
 setw -g mode-keys vi
 set -g escape-time 10
